# app/controller/sql.js
@@ -110,9 +110,28 @@ function authenticate(request, response, next) {
         .status(403)
         .json({ error: "Token Authentication failed ::: " + error });
     } else {
-      console.log("Application used ::: " + decoded.key);
+      console.log("Application used ::: " + decoded.keys);
       next();
     }
   });
 }
+
+function authenticateUser(request, response, next) {
+  const token = request.headers.authorization;
+  jwt.verify(token, tokenKey, (error, decoded) => {
+    if (error) {
+      response
+        .status(403)
+        .json({ error: "Token Authentication failed ::: " + error });
+    } else {
+      if (decoded.username !== undefined ) {  // check JWT user value
+        console.log("User logged ::: " + decoded.username);
+        next();
+      } else {
+        response.status(403).json({ error: "Token Authentication failed :: Incorrect token used" });
+      }
+    }
+  });
+}
+
 module.exports = { getUser, addUser, updateUser, cleanUsers };
